# binomcikit

./: .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  Conclusion & References.md  README.md  Use cases and Key Issues.md  Why Use Python for binomcikit.md  Why Use Python for binomcikit?.md  metadata.yaml  paper.bib  paper.md  pyproject.toml
.claude/skills/binomcikit-subphase/: SKILL.md
.github/workflows/: ci.yml  joss-check.yml  publish.yml  release.yml
benchmarks/: README.md  bench_coverage.hs  bench_kernels.py
docs/: Makefile  access_layer.md  bayesian_toolbox.md  conf.py  gallery.md  getting_started.md  glossary.md  index.md  index.rst  method_selection.md  migrating_from_r.md  r_to_python_mapping.md  requirements.txt  under_the_hood.md
docs/api/: index.md
docs/foundations/: index.md
docs/methods/: arcsine.md  bayes.md  blaker.md  exact.md  index.md  logit.md  lr.md  wald.md  waldt.md  wilson.md
docs/reference/: binomcikit._hpd.md  binomcikit.bayes.bayesfactors.md  binomcikit.bayes.empirical.md  binomcikit.bayes.posterior.md  binomcikit.bayes.predictive.md  binomcikit.ci.adj_n.md  binomcikit.ci.adj_n_graph.md  binomcikit.ci.adj_n_x.md  binomcikit.ci.all_graph.md  binomcikit.ci.base_n.md  binomcikit.ci.base_n_graph.md  binomcikit.ci.base_n_x.md  binomcikit.ci.base_n_x_graph.md  binomcikit.ci.bayes_n.md  binomcikit.ci.bayes_n_x.md  binomcikit.ci.cc_n.md  binomcikit.ci.cc_n_graph.md  binomcikit.ci.cc_n_x.md  binomcikit.covp.adj_all.md  binomcikit.covp.base_all.md  binomcikit.covp.cc_all.md  binomcikit.covp.exact_bayes.md  binomcikit.covp.general.md  binomcikit.covp.plots.md  binomcikit.err.adj_all.md  binomcikit.err.base_all.md  binomcikit.err.bayes.md  binomcikit.err.cc_all.md  binomcikit.err.general.md  binomcikit.err.plots.md  binomcikit.expl.adj_all.md  binomcikit.expl.base_all.md  binomcikit.expl.bayes.md  binomcikit.expl.cc_all.md  binomcikit.expl.general.md  binomcikit.expl.plots.md  binomcikit.pconf.adj_all.md  binomcikit.pconf.base_all.md  binomcikit.pconf.bayes.md  binomcikit.pconf.cc_all.md  (+3 more)
docs/theory/: 01_the_problem.md  index.md
docs/user_guide/: bayesian.md  binomial_proportion.md  choosing_a_method.md  evaluating_intervals.md  index.md
planning/: CONTINUE_HERE.md  README.md  RESEARCH.md  ROADMAP.md
planning/session-logs/: 2026-07-24_wilson-arcsine.md
previous-work/: ABOUT.md  Formulae and Explanation.md  README.md  joss_info.txt  proportion_methods_reference.md  references.txt
src/: temp
src/binomcikit/: __init__.py  _accel.py  _hpd.py  access.py  highlevel.py  plotly_viz.py
src/binomcikit/bayes/: __init__.py  bayesfactors.py  empirical.py  posterior.py  predictive.py
src/binomcikit/ci/: __init__.py  adj_n.py  adj_n_graph.py  adj_n_x.py  all_graph.py  base_n.py  base_n_graph.py  base_n_x.py  base_n_x_graph.py  bayes_n.py  bayes_n_x.py  blaker.py  cc_n.py  cc_n_graph.py  cc_n_x.py
src/binomcikit/covp/: __init__.py  adj_all.py  base_all.py  cc_all.py  exact_bayes.py  general.py  plots.py
src/binomcikit/err/: __init__.py  adj_all.py  base_all.py  bayes.py  cc_all.py  general.py  plots.py
src/binomcikit/expl/: __init__.py  adj_all.py  base_all.py  bayes.py  cc_all.py  general.py  plots.py
src/binomcikit/pconf/: __init__.py  adj_all.py  base_all.py  bayes.py  cc_all.py  general.py  plots.py
tests/: cases.py  r_exports.txt  test_accel.py  test_access.py  test_bayes.py  test_blaker.py  test_ci.py  test_completeness.py  test_covp.py  test_err.py  test_expl.py  test_golden_paper.py  test_highlevel.py  test_pconf.py  test_plotly.py  test_properties.py
tools/: gen_r_to_python_mapping.py  gen_reference_pages.py  render_gallery.py  theory_curriculum.md
