[project]
name = "binomcikit"
version = "2.0.9"
authors = [
    { name = "Vyasa R Rajeswaran, Pranava BA, Justindhas Y", email = "pranavabaascaran@gmail.com" },
]
description = "Used to calculate Confidence Intervals"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0" }

dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "plotnine"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pranava-ba/binomcikit"
Issues = "https://github.com/pranava-ba/binomcikit/issues"

# Build system
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# Setuptools configuration for package discovery
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[project.optional-dependencies]
test = ["pytest", "statsmodels"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning", "ignore::FutureWarning"]
